# scannerd

./: .clang-format  CMakeLists.txt  README.md  evdev  evdev.c  evdev.h  main.c  main.h  package-lock.json  query.c  run.c  sv.h
libs/: CMakeLists.txt
scripts/: build_web.sh  clean.sh  send.sh  ssh_cmd.sh
src/: CircularArray.h  evdev.cpp  evdev.h  main.cpp  main.h  query.c  query.cpp  query.h  run.c  run.cpp  run.h  sv.c  sv.h
static/: index-D1f1CzbU.css  index-D_dBafwF.css  index-DrCLDt6R.js  index-U5V_rZZI.js  index-gSyDRwCh.js  index-nIJrmjxF.js  index.html  index.js
vue-scannerd/: README.md  package-lock.json  package.json  vite.config.ts
vue-scannerd/src/: App.vue  main.ts
